Fixes #691 (row breaks in wrong places)

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -7,6 +7,7 @@ html, body
   height: 100%
   width: 100%
   overflow: hidden
+  cursor: default
 
 .dragging *
   cursor: pointer
@@ -95,6 +96,12 @@ html, body
       &.center
         stroke-width: 0.3
         stroke: #006600
+    &.blink
+      &.left, &.right
+        stroke: none
+      &.center
+        stroke-width: 0.2
+        stroke: #999900
 
 .ralign
   text-align: right
